Try to fix project structure
