# internal/adapters/server/common_handlers.go
@@ -16,13 +16,14 @@ type loginResponse struct {
 //
 //	@Summary		Log in to the server.
 //	@Description	log in to the server
-//	@Tags			common
+//	@Tags			Auth
 //	@Param			request	body	entities.AuthRequest	true	"Authentication request"
 //	@Produce		json
 //	@Success		200	{object}	loginResponse
 //	@Failure		400	{object}	string
+//	@Failure		500	{object}	string
 //	@Router			/login [post]
-func (s *Server) login(ctx *gin.Context) {
+func (s *Server) login(ctx *gin.Context) { // TODO
 	var request entities.AuthRequest
 	err := ctx.BindJSON(&request)
 	if err != nil {
@@ -44,24 +45,13 @@ func (s *Server) login(ctx *gin.Context) {
 //
 //	@Summary		Log out from the server.
 //	@Description	log out from the server
-//	@Tags			common
-//	@Param			token	query	string	true	"User authentication token"
+//	@Tags			Auth
+//	@Param			token	header	string	true	"User authentication token"
 //	@Success		200
 //	@Failure		400	{object}	string
-//	@Router			/logout [post]
-func (s *Server) logout(ctx *gin.Context) {
-	token, err := strconv.ParseUint(ctx.Query("token"), 10, 64)
-	if err != nil {
-		s.logger.Error(err)
-		_ = ctx.AbortWithError(http.StatusBadRequest, errors.ErrCannotParseURLWrap("token"))
-		return
-	}
-
-	err = s.authService.RemoveSession(s.storageService, token)
-	if err != nil {
-		_ = ctx.AbortWithError(http.StatusBadRequest, err)
-		return
-	}
+//	@Failure		500	{object}	string
+//	@Router			/logout [delete]
+func (s *Server) logout(ctx *gin.Context) { // TODO
 
 	ctx.Status(http.StatusOK)
 }
