# internal/adapters/storage/postgres_storage/models_repository.go
@@ -1,24 +1,38 @@
 package postgres_storage
 
 import (
+	"context"
 	"github.com/Inspirate789/Thermy-backend/internal/domain/entities"
-	"github.com/Inspirate789/Thermy-backend/internal/domain/services/storage"
+	"github.com/Inspirate789/Thermy-backend/pkg/sqlx_utils"
+	"github.com/jmoiron/sqlx"
 	"github.com/lib/pq"
 )
 
-type ModelsPgRepository struct{}
+type ModelsPgRepository struct {
+	conn *sqlx.DB
+}
 
-func (r *ModelsPgRepository) GetAllModels(conn storage.ConnDB, layer string) ([]entities.Model, error) {
+func (r *ModelsPgRepository) GetAllModels(layer string) ([]entities.Model, error) {
 	args := map[string]any{
 		"layer_name": layer,
 	}
-	return namedSelectSliceFromScript[[]entities.Model](conn, selectAllModels, args)
+	var models []entities.Model
+	err := sqlx_utils.NamedSelect(context.Background(), r.conn, &models, selectAllModels, args)
+	if err != nil {
+		return nil, err
+	}
+	return models, nil
 }
 
-func (r *ModelsPgRepository) SaveModels(conn storage.ConnDB, layer string, models []string) ([]int, error) {
+func (r *ModelsPgRepository) SaveModels(layer string, models []string) ([]int, error) {
 	args := map[string]any{
 		"layer_name":   layer,
 		"models_array": pq.Array(models),
 	}
-	return namedSelectSliceFromScript[[]int](conn, insertModels, args)
+	var id []int
+	err := sqlx_utils.NamedSelect(context.Background(), r.conn, &id, insertModels, args)
+	if err != nil {
+		return nil, err
+	}
+	return id, nil
 }
